--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gulp-watch": "^4.3.11"
   },
   "dependencies": {
-    "debug": "^2.6.1",
+    "debug": "~2",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.8",
     "postcss": "^5.2.15",
